tests/__snapshots__/api-toBeAssignableFrom-stderr.snap.txt
Error: Type 'Names' is not assignable from type '{ middle: string; }'.

  12 |     expect<Names>().type.toBeAssignableFrom({ first: "Rose", last: undefined });
  13 | 
  14 |     expect<Names>().type.toBeAssignableFrom({ middle: "O." });
     |                                             ~~~~~~~~~~~~~~~~
  15 |   });
  16 | 
  17 |   test("is NOT assignable target expression?", () => {

       at ./__typetests__/toBeAssignableFrom.tst.ts:14:45 ❭ source type ❭ is assignable target expression?

Error: Type 'Names' is assignable from type '{ first: string; }'.

  18 |     expect<Names>().type.not.toBeAssignableFrom({ middle: "O." });
  19 | 
  20 |     expect<Names>().type.not.toBeAssignableFrom({ first: "Rose" });
     |                                                 ~~~~~~~~~~~~~~~~~
  21 |   });
  22 | 
  23 |   test("is assignable target type?", () => {

       at ./__typetests__/toBeAssignableFrom.tst.ts:20:49 ❭ source type ❭ is NOT assignable target expression?

Error: Type 'Names' is not assignable from type '{ middle: string; }'.

  27 |     expect<Names>().type.toBeAssignableFrom<{ first: string; last?: string }>();
  28 | 
  29 |     expect<Names>().type.toBeAssignableFrom<{ middle: string }>();
     |                                             ~~~~~~~~~~~~~~~~~~
  30 |   });
  31 | 
  32 |   test("is NOT assignable target type?", () => {

       at ./__typetests__/toBeAssignableFrom.tst.ts:29:45 ❭ source type ❭ is assignable target type?

Error: Type 'Names' is assignable from type '{ first: string; }'.

  33 |     expect<Names>().type.not.toBeAssignableFrom<{ middle: string }>();
  34 | 
  35 |     expect<Names>().type.not.toBeAssignableFrom<{ first: string }>();
     |                                                 ~~~~~~~~~~~~~~~~~
  36 |   });
  37 | });
  38 | 

       at ./__typetests__/toBeAssignableFrom.tst.ts:35:49 ❭ source type ❭ is NOT assignable target type?

Error: Type '{ first: string; last: string; }' is not assignable from type '{ middle: string; }'.

  41 |     expect({ first: "Jane", last: "Swan" }).type.toBeAssignableFrom({ first: "Rose", last: "Smith" });
  42 | 
  43 |     expect({ first: "Jane", last: "Swan" }).type.toBeAssignableFrom({ middle: "O." });
     |                                                                     ~~~~~~~~~~~~~~~~
  44 |   });
  45 | 
  46 |   test("is NOT assignable target expression?", () => {

       at ./__typetests__/toBeAssignableFrom.tst.ts:43:69 ❭ source expression ❭ is assignable target expression?

Error: Type '{ first: string; }' is assignable from type '{ first: string; }'.

  47 |     expect({ first: "Jane", last: "Swan" }).type.not.toBeAssignableFrom({ middle: "O." });
  48 | 
  49 |     expect({ first: "Jane" }).type.not.toBeAssignableFrom({ first: "Rose" });
     |                                                           ~~~~~~~~~~~~~~~~~
  50 |   });
  51 | 
  52 |   test("is assignable target type?", () => {

       at ./__typetests__/toBeAssignableFrom.tst.ts:49:59 ❭ source expression ❭ is NOT assignable target expression?

Error: Type '{ first: string; last: string; }' is not assignable from type '{ middle: string; }'.

  53 |     expect({ first: "Jane", last: "Swan" }).type.toBeAssignableFrom<{ first: string; last: string }>();
  54 | 
  55 |     expect({ first: "Jane", last: "Swan" }).type.toBeAssignableFrom<{ middle: string }>();
     |                                                                     ~~~~~~~~~~~~~~~~~~
  56 |   });
  57 | 
  58 |   test("is NOT assignable type?", () => {

       at ./__typetests__/toBeAssignableFrom.tst.ts:55:69 ❭ source expression ❭ is assignable target type?

Error: Type '{ first: string; }' is assignable from type '{ first: string; }'.

  59 |     expect({ first: "Jane", last: "Swan" }).type.not.toBeAssignableFrom<{ middle: string }>();
  60 | 
  61 |     expect({ first: "Jane" }).type.not.toBeAssignableFrom<{ first: string }>();
     |                                                           ~~~~~~~~~~~~~~~~~
  62 |   });
  63 | });
  64 | 

       at ./__typetests__/toBeAssignableFrom.tst.ts:61:59 ❭ source expression ❭ is NOT assignable type?

